--- a/links.html
+++ b/links.html
@@ -2,11 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CQNMAAD</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Cosas que no me atrevo a decirte</h1>
-    <a href="links.html">Links</a>
-    
+    <a href="https://www.instagram.com/cqnmaad/">instagram</a>
 </body>
 </html>
