--- a/links.html
+++ b/links.html
@@ -2,9 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
     <a href="https://www.instagram.com/cqnmaad/">instagram</a>
+    <a href="https://www.tiktok.com/@cqnmaad">tiktok</a>
+    <a href="https://www.youtube.com/@cqnmaad">youtube</a>
 </body>
 </html>
