--- a/links.html
+++ b/links.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Cosas que no me atrevo a decirte</h1>
+    <h2>ÚLTIMOS LANZAMIENTOS</h2>
+    <p>EP Momentos I: Cartas</p>
+    <h2>SINGLES</h2>
+    <p>Senderos de tu piel</p>
+    <p>Parará</p>
     <a href="https://www.instagram.com/cqnmaad/">instagram</a>
     <a href="https://www.tiktok.com/@cqnmaad">tiktok</a>
     <a href="https://www.youtube.com/@cqnmaad">youtube</a>
